--- a/composer.json
+++ b/composer.json
@@ -4,9 +4,17 @@
     "require": {
         "dompdf/dompdf": "^3.0"
     },
+    "require-dev": {
+        "phpunit/phpunit": "^9.5"
+    },
     "autoload": {
         "psr-4": {
             "App\\": "app/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests/"
         }
     }
 }
