feat(audit): Implement mandatory audit logging for Agent and Corporate models

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,10 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/"
-        }
+        },
+        "classmap": [
+            "app/models/"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
